Fix the whitespace issue with the image in safari and add some padding to the end of the nav

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 .scrolly-bit {
-  padding-right: 33px;
+  padding-right: 23px;
 }
 
 .btn-scroll {
